RESOLVED FIXED168528
[WK2] Action sheet should not dismiss when a DDAction with user interface is being presented
https://bugs.webkit.org/show_bug.cgi?id=168528
Summary [WK2] Action sheet should not dismiss when a DDAction with user interface is ...
Wenson Hsieh
Reported 2017-02-17 12:30:46 PST
Attachments
Patch (5.32 KB, patch)
2017-02-17 12:47 PST, Wenson Hsieh
bdakin: review+
Patch for landing (5.31 KB, patch)
2017-02-17 13:31 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2017-02-17 12:47:36 PST
Wenson Hsieh
Comment 2 2017-02-17 13:31:03 PST
Created attachment 301980 [details] Patch for landing
WebKit Commit Bot
Comment 3 2017-02-17 13:45:23 PST
Comment on attachment 301980 [details] Patch for landing Clearing flags on attachment: 301980 Committed r212574: <http://trac.webkit.org/changeset/212574>
Note You need to log in before you can comment on or make changes to this bug.