Source/WebKit2/UIProcess/ios/WKActionSheet.h
@@ -41,7 +41,7 @@ typedef NS_ENUM(NSInteger, WKActionSheetPresentationStyle) {
 
 @property (nonatomic, assign) id <WKActionSheetDelegate> sheetDelegate;
 @property (nonatomic) UIPopoverArrowDirection arrowDirections;
-- (void)doneWithSheet;
+- (void)doneWithSheet:(BOOL)dismiss;
 - (BOOL)presentSheet:(WKActionSheetPresentationStyle)style;
 - (BOOL)presentSheetFromRect:(CGRect)presentationRect;
 - (void)updateSheetPosition;
